# Process this file with automake to produce Makefile.in

bin_PROGRAMS=peepd
peepd_SOURCES= \
	alsa.c \
	cmdline.c \
	cmdline.h \
	copyright.h \
	debug.c \
	debug.h \
	engine.c \
	engine.h \
	engine_queue.c \
	engine_queue.h \
	main.c \
	main.h \
	mixer.c \
	mixer.h \
	mixer_queue.c \
	mixer_queue.h \
	notice.c \
	notice.h \
	oss.c \
	parser.c \
	parser.h \
	playback.c \
	playback.h \
	server.c \
	server.h \
	sound.h \
	ssl_server.c \
	ssl_server.h \
	tcp_server.c \
	tcp_server.h \
	thread.c \
	thread.h \
	udp_server.c \
	udp_server.h \
	xml.c \
	xml.h \
	xml_notice.c \
	xml_notice.h \
	xml_theme.c \
	xml_theme.h

etc = /etc
